--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,29 +1,33 @@
 
 {% extends 'base.html' %}
 
+{% block title %}
+<title>Записи сообщества {{ group.title }}</title>
+{% endblock %}
+
 {% block content %}
-  <div class="container py-5">
-    <h1>{{ title }}</h1>
+<div class="container py-5">
+  <h1>{{ group.title }}</h1>
+  <p>
+    {{ group.description }}.
+  </p>
+  {% for post in posts %}
+  <article>
+    <ul>
+      <li>
+        Автор: {{ post.author.get_full_name }}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+    </ul>      
     <p>
-      {{ group.title }}.
-    </p>
-    {% for post in posts %}
-    {% if post != posts.0 %}
+      {{ post.text }}
+    </p>         
+  </article>
+  {% if not forloop.last %}
     <hr>
-    {% endif %}
-    <article>
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>      
-      <p>
-        {{ post.text }}
-      </p>         
-    </article>
-    {% endfor %}
-  </div>
+  {% endif %}
+  {% endfor %}
+</div>
 {% endblock %}  
