--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,28 +1,32 @@
 {% extends 'base.html' %}
 
+{% block title %}
+<title>Последние обновления на сайте</title>
+{% endblock %}
+
 {% block content %}
-  <div class="container py-5">     
-    <h1>{{ title }}</h1>
-    {% for post in posts %}
-    {% if post != posts.0 %}
+<div class="container py-5">     
+  <h1>Последние обновления на сайте</h1>
+  {% for post in posts %}
+  <article>
+    <ul>
+      <li>
+        Автор: {{ post.author.get_full_name }}
+      </li>
+      <li>
+        Дата публикации: {{ post.pub_date|date:"d E Y" }}
+      </li>
+    </ul>      
+    <p>
+      {{ post.text }}
+    </p>
+    {% if post.group %}   
+    <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+    {% endif %} 
+  </article>
+  {% if not forloop.last %}
     <hr>
-    {% endif %}
-    <article>
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>      
-      <p>
-        {{ post.text }}
-      </p>
-      {% if post.group %}   
-      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
-      {% endif %} 
-    </article>
-    {% endfor %}
-  </div>
+  {% endif %}
+  {% endfor %}
+</div>
 {% endblock %}  
