--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -11,8 +11,10 @@
     <meta name="msapplication-TileColor" content="#000">
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    {% block title %}  
-    {% endblock %}
+    <title>
+      {% block title %}  
+      {% endblock %}
+    </title>
   </head>
   <body>
     <header>
