--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -2,7 +2,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Записи сообщества {{ group.title }}</title>
+Записи сообщества {{ group.title }}
 {% endblock %}
 
 {% block content %}
